@@ -66,7 +66,8 @@ task runSampleSpring(type: JavaExec) {
   classpath += files(buildDir.getAbsolutePath() + '/resources')
   classpath += files(buildDir.getAbsolutePath() + '/resources/main')
   main = 'com.ponysdk.impl.spring.MainSpring'
-  jvmArgs = ['-server', '-Xmx512m', '-Dlog4j.configurationFile=etc/log4j2.xml', '-agentlib:jdwp=transport=dt_socket,server=y,address=8888,suspend=n']
+  //jvmArgs = ['-server', '-Xmx512m', '-Dlog4j.configurationFile=etc/log4j2.xml', '-agentlib:jdwp=transport=dt_socket,server=y,address=8888,suspend=n']
+  jvmArgs = ['-Xmx2g', '-Xms2g', '-XX:-DisableExplicitGC', '-Xlog:safepoint=info,gc*=info,gc+age=trace:file=run_sample_spring_gc.log:time,uptime,level,tags:filesize=10M,filecount=100', '-Dlog4j.configurationFile=etc/log4j2.xml', '-agentlib:jdwp=transport=dt_socket,server=y,address=8888,suspend=n', '-XX:+UseConcMarkSweepGC', '-Xmn1850M', '-XX:+UseCMSInitiatingOccupancyOnly', '-XX:CMSInitiatingOccupancyFraction=80']
 }
 
 task runSampleTrading(type: JavaExec) {
